# linus-invest-flow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/: __init__.py  app.py
backend/crm/: service.py
backend/email/: __init__.py  services.py
backend/store/: __init__.py  models.py  services.py
frontend/: Makefile  package-lock.json  package.json
frontend/src/: App.tsx  api_response.json  index.tsx  models.ts
frontend/src/components/: ListItem.tsx  Step.tsx  StepLayout.tsx  index.ts
frontend/src/components/InvestFlow/: CollectUserDataStep.tsx  InvestFlow.tsx
frontend/src/components/InvestFlow/ConfirmationStep/: ConfirmationStep.tsx  SummaryItem.css  SummaryItem.tsx
frontend/src/components/InvestFlow/SelectProjectStep/: ListItem.tsx  SelectProjectStep.tsx
frontend/src/components/InvestFlow/__test__/: InvestFlow.test.tsx
frontend/src/components/form/: EmailInput.tsx  NumberInput.tsx
frontend/src/mocks/: api_response.json  browser.ts  handlers.ts
tests/: __init__.py  test_resources.py  test_store.py
