[tool.poetry]
name = "moz-support"
version = "0.1.0"
description = ""
authors = ["bciobo <b.ciobotaru@solvemate.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^20.2.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^5.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
